--- a/package.json
+++ b/package.json
@@ -8,20 +8,29 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "prepare": "husky"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@types/node": "22.5.4",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
+    "@types/node": "22.5.5",
     "aws-cdk": "2.158.0",
+    "husky": "9.1.6",
+    "lint-staged": "15.2.10",
+    "prettier": "3.3.3",
     "ts-node": "^10.9.2",
+    "tsx": "4.19.1",
     "typescript": "~5.6.2"
   },
   "dependencies": {
     "aws-cdk-lib": "2.158.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
-  }
+  },
+  "prettier": {
+    "singleQuote": true
+  },
+  "lint-staged": {
+    "*.{js,ts,json,md}": "prettier --write"
+  },
+  "packageManager": "pnpm@8.7.4+sha1.9dfcac89c4010a00ce092c3cda76dab72cd99198"
 }
