--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,15 @@ edition = "2021"
 
 [dependencies]
 lambda_http = "0.13.0"
-
-tokio = { version = "1", features = ["macros"] }
-
+tokio = { version = "1", features = ["full"] }
+serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.128"
+aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
+aws-sdk-dynamodb = "1.46.0"
+ulid = "1.1.3"
+bon = "2.3.0"
 
 [[bin]]
-name = "function1"
-path = "src/bin/function1.rs"
+name = "add_person"
+path = "src/bin/add_person.rs"
 test = false
