--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
 aws-sdk-dynamodb = "1.46.0"
 ulid = "1.1.3"
 bon = "2.3.0"
+validator = { version = "0.18", features = ["derive"] }
 
 [[bin]]
 name = "add_person"
